# SquidSCAS

./: README.md
scripts/: cloud_discovery.db  collectBlackList.conf  collectBlackList.sh  scas_accesspolicy.pl  scas_scan.pl  scas_scan_report.pl  scas_send_log.sh  scas_service.pl
squidscas/: AUTHORS  COPYING  Makefile.am  Makefile.in  configure  configure.ac
squidscas/etc/: Makefile.am  Makefile.in  scas_scan.conf  squidscas.conf
squidscas/scripts/: scas_scan.pl  scas_scan_report.pl
squidscas/src/: Makefile.am  Makefile.in  secioss_utils.c  secioss_utils.h  squidscas.c  squidscas.h
